IE fixes for
- Account and settings page
- Add new solution
- Due by date not showing up
- Lot of button irregularities

--- a/public/src/application.scss
+++ b/public/src/application.scss
@@ -2218,7 +2218,7 @@ h4.border_title{
 	border:1px solid #dfdfdf;
 	div.item{
 		padding:5px;
-		a{
+		em{
 			text-transform:capitalize;
 			font-size:11px;
 			color:#527EAA;
